edicao e remocao de membros e postos da policia criacao de tabela de pagamentos
